add ogm quarkus example (look at movierepository for inspiration)
Signed-off-by: Michael Simons <michael.simons@neo4j.com>