@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019-2024 "Neo4j,"
+ * Copyright (c) 2019-2025 "Neo4j,"
  * Neo4j Sweden AB [https://neo4j.com]
  *
  * This file is part of Neo4j.
@@ -16,11 +16,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.neo4j.cypherdsl.examples.quarkus.movies;
+package org.neo4j.cypherdsl.examples.ogm.movies;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import org.neo4j.ogm.annotation.Id;
@@ -46,6 +46,13 @@ public final class Movie {
 	@Relationship(value = "DIRECTED", direction = Relationship.Direction.INCOMING)
 	private List<Person> directors = new ArrayList<>();
 
+	private LocalDate watchedOn;
+
+	/**
+	 * A new movie
+	 *
+	 * @param title the unmodifiable title
+	 */
 	public Movie(String title) {
 		this.title = title;
 	}
@@ -58,37 +65,75 @@ public final class Movie {
 
 	private Integer released;
 
+	/**
+	 * @return the title
+	 */
 	public String getTitle() {
 		return title;
 	}
 
+	/**
+	 * @return the description
+	 */
 	public String getDescription() {
 		return description;
 	}
 
+	/**
+	 * @return Read only view of the actors.
+	 */
 	public List<Actor> getActors() {
-		return Collections.unmodifiableList(this.actors);
+		return List.copyOf(this.actors);
 	}
 
+	/**
+	 * @return Read only view of the directors.
+	 */
 	public List<Person> getDirectors() {
-		return Collections.unmodifiableList(this.directors);
+		return List.copyOf(this.directors);
 	}
 
+	/**
+	 * @return Release year
+	 */
 	public Integer getReleased() {
 		return released;
 	}
 
+	/**
+	 * @param released new release year
+	 */
 	public void setReleased(Integer released) {
 		this.released = released;
 	}
 
+	/**
+	 * Adds new actors
+	 *
+	 * @param newActors list of new actors
+	 * @return this instance
+	 */
 	public Movie addActors(Collection<Actor> newActors) {
 		this.actors.addAll(newActors);
 		return this;
 	}
 
+	/**
+	 * Adds new directors
+	 *
+	 * @param newDirectors list of new actors
+	 * @return this instance
+	 */
 	public Movie addDirectors(Collection<Person> newDirectors) {
 		this.directors.addAll(newDirectors);
 		return this;
+	}
+
+	public LocalDate getWatchedOn() {
+		return watchedOn;
+	}
+
+	public void setWatchedOn(LocalDate watchedOn) {
+		this.watchedOn = watchedOn;
 	}
 }
